--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 ---
-layout: home
+layout: single
+title:  "About me"
+# date:   202e2-03-01 09:58:43 -0300
+categories: About me
 author_profile: true
+
+author:
+  name     : "Camila Martínez Parra"
+  avatar   : "/assets/bio-photo1.jpeg"
+  bio      : "Pre PhD Student - Stochastic Optimisation"
+  location : "Paris, France"
+  links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:camila.martinez-parra@enpc.fr"
+# layout: home
 ---
+I am a pre PhD student in Optimisation at Ecole des Ponts ParisTech. 
+I am currently studying Dynamic Programming and Decomposition methods for prospective studies in energy systems in the context of a project under an agreement between CERMICS and RTE.
